Reverted lightbox for logo and image examples and fixed alignment issue

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -22,6 +22,10 @@ body {
     -webkit-text-size-adjust: 100%;
 }
 
+.no-justify {
+    text-align: left;
+}
+
 /**
  * Set `margin-bottom` to maintain vertical rhythm
  */
